trunk/Archive2/c8/38f81ff5b0e62e/output
+ clang++ -O0 -Wall -Wextra -Wconversion -pedantic -Wno-unused-variable -Wno-unused-parameter -std=c++11 -pthread main.cpp
main.cpp:6:26: error: expected ';' at end of declaration list
    virtual ~Weapon() = 0 {}
                         ^
                         ;
1 error generated.
