trunk/Archive2/c8/38f81ff5b0e62e/main.cpp
#include <iostream>

struct Weapon
{
//    virtual ~Weapon() = 0;
    virtual ~Weapon() = 0 {}
};

//inline Weapon::~Weapon() {}

int main()
{
    
}
